<resources>
    <string name="app_name">RepartoRef</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Entregas</string>
    <string name="menu_slideshow">Pedidos Pendientes</string>
    <string name="menu_slideFin">Terminados</string>
    <string name="menu_slideCob">Reportar un problema</string>
    <string name="title_activity_ubica_mapa">Map</string>
    <string name="title_activity_mapas">Map</string>
    <string name="title_activity_maps">Map</string>

</resources>