<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sienrgitec.navegacionapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_slidefin"
        android:name="com.sienrgitec.navegacionapp.ui.terminados.TerminadosFragment"
        android:label="@string/menu_slideFin"
        tools:layout="@layout/fragment_terminados" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sienrgitec.navegacionapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sienrgitec.navegacionapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_slidecob"
        android:name="com.sienrgitec.navegacionapp.ui.cobranza.CobranzaFragment"
        android:label="@string/menu_slideCob"
        tools:layout="@layout/fragment_slidecob" />




</navigation>